# mcp_client

./: .gitignore  GERMAN_LLM_README.md  GERMAN_README.md  setup-german-llm.sh  test-german-integration.py
mcp-client/: cli.py  pyproject.toml
mcp-client/client/german_llm/: __init__.py  cli.py  config.py  examples.py  german_analyzer.py  languagetool_client.py  leolm_client.py
mcp-client/client/test/: test-german-integration.py
