[project]
name = "mcp-client"
version = "0.1.0"
description = "Simple MCP client for DeepL translation with VS Code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.9.3",
    "postgres-mcp>=0.3.0",
    "python-dotenv>=1.1.0",
    "typing-extensions>=4.0.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "language-tool-python>=2.7.1",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
